[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/KOMIKAP_.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StartLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -135.5
margin_bottom = 135.5
custom_fonts/font = SubResource( 1 )
text = "Timber!
Press <Enter> to start"
align = 1
valign = 1

[node name="EndLabel" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -135.5
margin_bottom = 135.5
custom_fonts/font = SubResource( 1 )
text = "Game Over
Press <Enter> to start"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = 10.0

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
margin_right = 1920.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
valign = 1

[node name="TimeBar" type="ProgressBar" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -400.0
margin_top = 950.0
margin_right = 400.0
margin_bottom = 1050.0
grow_horizontal = 2
custom_styles/fg = SubResource( 3 )
max_value = 6.0
value = 6.0
percent_visible = false

[connection signal="changed" from="TimeBar" to="." method="_on_TimeBar_changed"]
